<resources>
    <string name="app_name">Chronic Condition Management</string>
    <string name="beginSurvey">Begin Survey</string>
    <string name="mainScreenStr">Main Menu</string>
    <string name="ccmExplanation">A brief survey to annotate cognition</string>
    <string name="qYear">What is the year?</string>
    <string name="qSeason">What is the season?</string>
    <string name="qDay">What is the weekday?</string>
    <string name="next">Next</string>
    <string name="qDate">What is the date?  (mmddyyyy)</string>
    <string name="qMonth">What is the month?</string>
    <string name="qWhere">Where are you now?</string>
    <string name="qState">What State are we in?</string>
    <string name="qWorld">Spell \"WORLD\" backwards</string>
    <string name="threeObjectsString">Type in the three boxes the first three things you see:</string>
    <string name="surveyComplete">Survey Complete!</string>
    <string name="q3ObjectsRepeat">What were the three objects you typed two screens ago?</string>
    <string name="mainMenu">Main Menu</string>

    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>

    <string name="cogSurvey">Cognition Survey</string>
    <string name="cogSurveyDesc">The cognition survey is a brief test to survey daily cognition</string>
    <string name="first_answer">First Answer</string>
    <string name="third_answer">Third Answer</string>
    <string name="second_answer">Second Answer</string>
    <string name="qGrand">Have you had any grandiose thoughts today?</string>
    <string name="qGrandextend">What were your grandiose thoughts?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="qspeedhappy">Are the happy feelings speeding up your thought process today?</string>
    <string name="qspeedsad">Are the sad feelings slowing down your thought process today?</string>
    <string name="qbrainfog">Are you experiencing any brain fog today?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>