<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".qDayofweek">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="29dp"
            android:text="@string/qDay"
            app:layout_constraintEnd_toEndOf="@+id/radioButton4"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:layout_marginEnd="51dp"
            android:text="@string/sun"
            app:layout_constraintEnd_toStartOf="@+id/radioButton4"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tue"
            app:layout_constraintStart_toStartOf="@+id/radioButton"
            app:layout_constraintTop_toBottomOf="@+id/radioButton" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            app:layout_constraintBaseline_toBaselineOf="@+id/radioButton6"
            app:layout_constraintStart_toStartOf="@+id/radioButton2" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/mon"
            app:layout_constraintBottom_toTopOf="@+id/radioButton5"
            app:layout_constraintStart_toStartOf="@+id/radioButton5" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="85dp"
            android:text="@string/wed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioButton2" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:text="@string/fri"
            app:layout_constraintStart_toStartOf="@+id/radioButton5"
            app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="209dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="209dp"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/radioButton7"
            app:layout_constraintTop_toTopOf="@+id/radioButton3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>